[package]
name = "watchfolde-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "3.1.18", features = ["derive"] }
inotify = "0.10.0"
